tests/ui/abi/simd-abi-checks-avx.stderr
error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:59:11
   |
LL |         f(g());
   |           ^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:59:9
   |
LL |         f(g());
   |         ^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:65:14
   |
LL |         gavx(favx());
   |              ^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:65:9
   |
LL |         gavx(favx());
   |         ^^^^^^^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:75:19
   |
LL |         w(Wrapper(g()));
   |                   ^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `Wrapper` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:75:9
   |
LL |         w(Wrapper(g()));
   |         ^^^^^^^^^^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:89:9
   |
LL |         some_extern();
   |         ^^^^^^^^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function definition uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled
  --> $DIR/simd-abi-checks-avx.rs:24:1
   |
LL | unsafe extern "C" fn g() -> __m256 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function definition uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled
  --> $DIR/simd-abi-checks-avx.rs:19:1
   |
LL | unsafe extern "C" fn f(_: __m256) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function definition uses SIMD vector type `Wrapper` which (with the chosen ABI) requires the `avx` target feature, which is not enabled
  --> $DIR/simd-abi-checks-avx.rs:14:1
   |
LL | unsafe extern "C" fn w(_: Wrapper) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:53:8
   |
LL |     || g()
   |        ^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

note: the above error was encountered while instantiating `fn in_closure::{closure#0}`
  --> $DIR/simd-abi-checks-avx.rs:81:9
   |
LL |         in_closure()();
   |         ^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

